--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
-  }
+  },
+  "proxy": "https://web2-lab2-api.onrender.com"
 }
